--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,22 @@
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+    <resource-ref>
+	    <description>Student Tracker Datasource</description>
+	    <res-ref-name>jdbc/student_tracker</res-ref-name>
+	    <res-type>javax.sql.DataSource</res-type>
+	    <res-auth>Container</res-auth>
+	  </resource-ref>
+	  <resource-ref>
+	    <description>Student Tracker Datasource Sqlserver</description>
+	    <res-ref-name>jdbc/student_tracker_sqlserver</res-ref-name>
+	    <res-type>javax.sql.DataSource</res-type>
+	    <res-auth>Container</res-auth>
+	  </resource-ref>
+	  <resource-ref>
+	    <description>Student Tracker Datasource Oracle SQL</description>
+	    <res-ref-name>jdbc/student_oracle</res-ref-name>
+	    <res-type>javax.sql.DataSource</res-type>
+	    <res-auth>Container</res-auth>
+	  </resource-ref>
 </web-app>
