--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
     <name>spring-mvc</name>
     <description>Proyecto java spring mvc</description>
     <properties>
-        <java.version>1.8</java.version>
-        <spring.version>3.0.5.RELEASE</spring.version>
-        <servlet-api.version>2.5</servlet-api.version>
-        <postgresql.version>42.6.0</postgresql.version>
-        <lombok.version>1.18.30</lombok.version>
-    </properties>
+	    <java.version>1.8</java.version>
+	    <spring.version>3.0.5.RELEASE</spring.version>
+	    <servlet-api.version>3.1.0</servlet-api.version> <!-- Updated from 2.5 to 3.1.0 -->
+	    <postgresql.version>42.6.0</postgresql.version>
+	    <lombok.version>1.18.30</lombok.version>
+	</properties>
 
     <dependencies>
         <!-- Utilidades -->
@@ -66,11 +66,11 @@
 
         <!-- Servlet/JSP -->
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>${servlet-api.version}</version>
-            <scope>provided</scope>
-        </dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>${servlet-api.version}</version>
+		    <scope>provided</scope>
+		</dependency>
         
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
